k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-node-app-svc
spec:
  selector:
    app: sample-node-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
